# dpll

./: .ghci  README.md  dpll.cabal  dpll_writeup.lhs
src/: DPLL.hs  Functorful.hs
