name:                dpll
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/parsonsmatt/dpll
license:             BSD3
license-file:        LICENSE
author:              Matthew Parsons
maintainer:          parsonsmatt@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DPLL
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/parsonsmatt/dpll
